--- a/public/Love.html
+++ b/public/Love.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Love You</title>
@@ -13,16 +12,20 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            overflow: hidden; /* ป้องกันการเลื่อน */
-            background-color: #ef0e0e; /* สีชมพู */
+            overflow: hidden;
+            background-color: #ef0e0e;
         }
+
         .container {
             text-align: center;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+            position: relative;
         }
+
         input[type="password"] {
             font-size: 18px;
             padding: 10px;
@@ -31,6 +34,7 @@
             border-radius: 5px;
             text-align: center;
         }
+
         button {
             margin-top: 15px;
             padding: 10px 20px;
@@ -41,65 +45,77 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
         button:hover {
             background-color: #eb02d4;
         }
+
         .heart {
             position: absolute;
-            width: 50px;
-            height: 50px;
-            background-color: #fc5bc1;
+            width: 40px;
+            height: 40px;
+            background-color: #ff4d8b;
+            left: 50%;
+            top: 50%;
             transform: rotate(-45deg);
-            animation: float 5s linear infinite;
+            animation: float 6s linear infinite;
         }
+
         .heart::before,
         .heart::after {
             content: '';
             position: absolute;
-            width: 50px;
-            height: 50px;
-            background-color: #fc5bc1;
+            width: 40px;
+            height: 40px;
+            background-color: #ff4d8b;
             border-radius: 50%;
         }
+
         .heart::before {
-            top: -25px;
+            top: -20px;
             left: 0;
         }
+
         .heart::after {
             top: 0;
-            left: 25px;
+            left: 20px;
         }
+
         @keyframes float {
             0% {
-                transform: rotate(-45deg) translateY(100vh);
+                transform: rotate(-45deg) translateY(100vh) scale(1);
                 opacity: 1;
             }
             100% {
-                transform: rotate(-45deg) translateY(-150vh);
+                transform: rotate(-45deg) translateY(-150vh) scale(1.2);
                 opacity: 0;
             }
         }
     </style>
+
     <script>
         function validatePin(event) {
-            event.preventDefault(); // ป้องกันการรีโหลดหน้า
+            event.preventDefault();
             const inputPin = document.getElementById('pin').value;
             const correctPin = "200424";
 
             if (inputPin === correctPin) {
                 alert('รหัสถูกต้อง! กำลังไปหน้าต่อไป...');
-                window.location.href = "nextpage.html"; // URL ของหน้าถัดไป
+                window.location.href = "nextpage.html";
             } else {
                 alert('รหัสไม่ถูกต้อง! กรุณาลองใหม่อีกครั้ง.');
             }
         }
 
         function createHearts() {
-            for (let i = 0; i < 20; i++) { // เพิ่มหัวใจ 20 ดวง
+            for (let i = 0; i < 50; i++) {
                 const heart = document.createElement('div');
                 heart.className = 'heart';
-                heart.style.left = Math.random() * 100 + 'vw'; // สุ่มตำแหน่งในแนวตั้ง
-                heart.style.animationDuration = Math.random() * 3 + 3 + 's'; // สุ่มความเร็ว
+                heart.style.left = Math.random() * 100 + 'vw';
+                heart.style.top = Math.random() * 100 + 'vh';
+                heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+                heart.style.opacity = Math.random();
+                heart.style.transform = `rotate(-45deg) scale(${Math.random() * 0.6 + 0.4})`;
                 document.body.appendChild(heart);
             }
         }
